      never in a stable release
    - Make DscSrcPackage working
  * apt/gtk/widgets.py:
    - Fix the code and document the signals
  * Introduce new documentation build with Sphinx
    - debian/rules: Build the documentation here
    - setup.py: Remove pydoc building and add new docs.
    - debian/examples: Include examples from documentation
    - debian/python-apt.docs: Change html/ to doc/build/html.
  * setup.py:
    - Only create build/data when building, not all the time
    - Remove build/mo and build/data on clean -a
  * debian/control:
    - Remove the Conflicts on python2.3-apt, python2.4-apt, as
      they are only needed for oldstable (sarge)
    - Build-Depend on python-sphinx (>= 0.5)

 -- Julian Andres Klode <jak@debian.org>  Fri, 09 Jan 2009 17:20:41 +0100

python-apt (0.7.9~exp1) experimental; urgency=low

  * Merged python-apt consolidation branch by Sebastian
    Heinlein (many thanks)
  * apt/cache.py:
    - new method "isVirtualPackage()" 
    - new method "getProvidingPackages()"
    - new method "getRequiredDownload()"
    - new method "additionalRequiredSpace()"
  * apt/debfile.py:
    - move a lot of the gdebi code into this file, this
      provides interfaces for querrying and installing
      .deb files and .dsc files
  * apt/package.py:
    - better description parsing 
    - new method "installedFiles()"
    - new method "getChangelog()"
  * apt/gtk/widgets.py:
    - new gobject GOpProgress
    - new gobject GFetchProgress
    - new gobject GInstallProgress
    - new gobject GDpkgInstallProgress
    - new widget GtkAptProgress
  * doc/examples/gui-inst.py: 
    - updated to use the new widgets
  * debian/control:
    - add suggests for python-gtk2 and python-vte
  * setup.py:
    - build html/ help of the apt and aptsources modules
      into /usr/share/doc/python-apt/html

 -- Michael Vogt <mvo@debian.org>  Mon, 15 Dec 2008 14:29:47 +0100

python-apt (0.7.8) unstable; urgency=low

  [ Michael Vogt ]
  * python/cache.cc: