@@ -13,6 +13,7 @@ include /usr/share/cdbs/1/class/python-distutils.mk
 
 PKG=python-apt
 DEBVER=$(shell dpkg-parsechangelog |sed -n -e '/^Version:/s/^Version: //p')
+DEB_COMPRESS_EXCLUDE:=.html .js _static/* _sources/* _sources/*/* .inv
 DEB_BUILD_PROG:=debuild --preserve-envvar PATH --preserve-envvar CCACHE_DIR -us -uc $(DEB_BUILD_PROG_OPTS)
 
 build/python-apt-dbg::
