@@ -19,8 +19,11 @@ import sys, os
 # If your extensions are in another directory, add it here. If the directory
 # is relative to the documentation root, use os.path.abspath to make it
 # absolute, like shown here.
-sys.path.insert(0,os.path.abspath('..'))
-sys.path.insert(0,os.path.abspath('../..'))
+sys.path.insert(0, os.path.abspath('..'))
+sys.path.insert(0, os.path.abspath('../..'))
+if os.path.exists("../../build"):
+    for dirname in os.listdir('../../build'):
+        sys.path.insert(0, os.path.abspath('../../build/' + dirname))
 
 # General configuration
 # ---------------------
